# bowtie

./: .gitignore  Cargo.toml  README.md
examples/: chemical_spillage.rs  chemical_spillage.txt  cyber_attacks.rs  cyber_attacks.txt  main.rs
src/: brush.rs  lib.rs  render.rs  svg.rs
src/renderer/: mod.rs  svg.rs
